--- a/typespeedtest.html
+++ b/typespeedtest.html
@@ -37,6 +37,25 @@
                     <a class="navbar-item" href="pricing.html">Pricing</a>
                     <a class="navbar-item" href="faq.html">FAQ</a>
                     <a class="navbar-item" href="contact.html">Contact Me</a>
+                    <div class="navbar-item has-dropdown is-hoverable is-left">
+                        <a class="navbar-link">
+                            Social
+                        </a>
+                        <div class="navbar-dropdown">
+                            <a class="navbar-item" href="https://twitter.com/spinodevelops">
+                                Twitter
+                            </a>
+                            <a class="navbar-item" href="https://discord.gg/bmsvFDThMQ">
+                                Discord
+                            </a>
+                            <a class="navbar-item" href="https://github.com/bilalahmed1905">
+                                Github
+                            </a>
+                            <a class="navbar-item" href="https://instagram.com/spinodevelops">
+                                Instagram
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
@@ -46,11 +65,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </nav>
     </div>
-    </head>
 
-    <body>
         <header class="masthead">
             <h1>Test Your Typing Speed</h1>
         </header>
@@ -68,8 +86,9 @@
                 </div><!-- #origin-text -->
 
                 <div class="test-wrapper">
+                    <label for="test-area"></label>
                     <textarea id="test-area" name="textarea" rows="6"
-                        placeholder="The clock starts when you start typing."></textarea>
+                                                             placeholder="The clock starts when you start typing."></textarea>
                 </div><!-- .test-wrapper -->
 
                 <div class="meta">
