--- a/contact.html
+++ b/contact.html
@@ -40,16 +40,16 @@
                                                         Social
                                                 </a>
                                                 <div class="navbar-dropdown">
-                                                        <a class="navbar-item" href="https://twitter.com/spinodevelops">
+                                                        <a class="navbar-item" href="https://twitter.com/spinodevelops" target="_blank">
                                                                 Twitter
                                                         </a>
-                                                        <a class="navbar-item" href="https://discord.gg/bmsvFDThMQ">
+                                                        <a class="navbar-item" href="https://discord.gg/bmsvFDThMQ" target="_blank">
                                                                 Discord
                                                         </a>
-                                                        <a class="navbar-item" href="https://github.com/bilalahmed1905">
+                                                        <a class="navbar-item" href="https://github.com/bilalahmed1905" target="_blank">
                                                                 Github
                                                         </a>
-                                                        <a class="navbar-item" href="https://instagram.com/spinodevelops">
+                                                        <a class="navbar-item" href="https://instagram.com/spinodevelops" target="_blank">
                                                                 Instagram
                                                         </a>
                                                 </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="w3-card-4">
         
-                <div class="w3-container w3-blue" style="padding: 10px 10px;">
+                <div class="w3-container w3-blue" style="padding: 20px 20px;height: 10%;">
                         <h2>Contact Me</h2>
                 </div>
         
