Prices for website changed
changed prices and information in pricing and faq page

--- a/faq.html
+++ b/faq.html
@@ -71,7 +71,7 @@
         <button class="faq">What Products do you sell?</button>
         <div class="panel">
                 <p>Currently we only sell Pre Built Websites starting at $79.99, and Custom Websites starting at a
-                        Custom Price, $30 USD per page and minimum 4+ Pages, Other Products are currently in planning
+                         reasonable rate which we can discuss per page., Other Products are currently in planning
                         and/or testing
                 </p>
         </div>
@@ -85,15 +85,14 @@
                         information,
                         images and previews <a href="templates.html">click here</a></p>
         </div>
-        <button class="faq">What is a Normal Website?</button>
+        <button class="faq">How will my previous Website be Upgraded? </button>
         <div class="panel">
-                <p>A Normal Website is more or less a Custom Website without some options such as keeping the custom
-                        template
+                <p>We will work something out. If you have a website made you want upgraded simply tell me what it is hosted on and I can start updating it.
                 </p>
         </div>
         <button class="faq">What is a Custom Website?</button>
         <div class="panel">
-                <p>A Custom Website is a fully customizable website which starts at Minimum $30 USD per page. Custom
+                <p>A Custom Website is a fully customizable website we can work out a reasonable rate per page. Custom
                         website features include keeping the template and custom finishes as well</p>
         </div>
         <button class="faq">Do you provide hosting?</button>
@@ -102,7 +101,7 @@
         </div>
         <button class="faq">Are you doing Backend Development?</button>
         <div class="panel">
-                <p>At the moment no I am not</p>
+                <p>At the moment no We are not</p>
         </div>
         <button class="faq">Do you provide refunds?</button>
         <div class="panel">
