--- a/pricing.html
+++ b/pricing.html
@@ -7,8 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet"
-                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -80,25 +79,25 @@
                         <div class="li">4 Web Pages</div>
                         <div class="li">5 Revisions</div>
                         <div class="li">1-2 Week Delivery</div>
-                        <div class="li"><a href="#" class="button is-success">Order Now</a></div>
+                        <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
                 <div class="card">
-                        <div class="header" style="background-color: dodgerblue;">Pro Website</div>
-                        <div class="price">$189.99 USD</div>
-                        <div class="li">Normal Website</div>
-                        <div class="li">8 Web Pages</div>
-                        <div class="li">8 Revisions</div>
-                        <div class="li">2-4 Week Delivery</div>
-                        <div class="li"><a href="#" class="button is-success">Order Now</a></div>
+                        <div class="header" style="background-color: dodgerblue;">Upgrade an Existing Website</div>
+                        <div class="price">Custom Price</div>
+                        <div class="li">Upgrade your old website</div>
+                        <div class="li">We can work out a price per page</div>
+                        <div class="li">3 Revisions Included, $10 per extra</div>
+                        <div class="li">Delivery Time Depends on Project</div>
+                        <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
                 <div class="card">
                         <div class="header" style="background-color: gold;">Custom Website</div>
                         <div class="price">Custom Price</div>
                         <div class="li">Fully Custom Website</div>
-                        <div class="li">$30 USD per page</div>
+                        <div class="li">We can work out a price per page</div>
                         <div class="li">3 Revisions Included, $10 per extra</div>
                         <div class="li">Delivery Time Depends on Project</div>
-                        <div class="li"><a href="#" class="button is-success">Order Now</a></div>
+                        <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
         </div>
         <footer class="footer">
