Edited the faq page
removed some template options and added some different ones.

--- a/faq.html
+++ b/faq.html
@@ -81,9 +81,8 @@
         </div>
         <button class="faq">For the Pre Built Websites what templates are available?</button>
         <div class="panel">
-                <p>Currently we have Classic Hosting Site, Discord Bot Page, Flexbox Inc, Gridline Corp, for more
-                        information,
-                        images and previews <a href="templates.html">click here</a></p>
+                <p>Currently we have Xtremex Hosting, Discord Bot Page. Contact us or <a href="templates.html">click here</a>  for more
+                        information.</p>
         </div>
         <button class="faq">How will my previous Website be Upgraded? </button>
         <div class="panel">
