Major Update (SignUp, Text Edits and More!)
- Added the signup page which currently asks for an email and name: next update should have the signups posted to a secure admin dashboard which will only be accesible through netlify identity and only invited users.

- register page added (which is currently not available to public and will not be because it will be for logging into the admin board to check emails and other data for future)

- text edits (mostly for the faq page)

- added new section about how to pay spino on faq

- sign up button on navbar

-

--- a/faq.html
+++ b/faq.html
@@ -59,7 +59,7 @@
                                 <div class="navbar-end">
                                         <div class="navbar-item">
                                                 <div class="buttons">
-                                                        <a class="button is-primary">Help</a>
+                                                        <a class="button is-primary">Sign Up</a>
                                                         <a class="button is-info">Checkout</a>
                                                 </div>
                                         </div>
@@ -68,45 +68,49 @@
                 </nav>
         </div>
         <div class="h0">Frequently Asked Questions</div>
-        <button class="faq">What Products do you sell?</button>
+        <button class="faq">What are your services/products?</button>
         <div class="panel">
-                <p>Currently we only sell Pre Built Websites starting at $79.99, and Custom Websites starting at a
-                         reasonable rate which we can discuss per page., Other Products are currently in planning
-                        and/or testing
+                <p>Currently my services are Pre Built Websites starting at $79.99, and Custom Websites starting at a
+                         reasonable rate which we can discuss per page. Other Products and Services are currently in planning
+                        and/or testing.
                 </p>
         </div>
         <button class="faq">What currency do you charge in?</button>
         <div class="panel">
-                <p>All Orders are charged in $USD (US Dollars)</p>
+                <p>All Orders are charged in $USD (US Dollars).</p>
+        </div>
+        <button class="faq">How will I send the payment?</button>
+        <div class="panel">
+                <p>Currently you can pay me through PayPal or E-Transfer. Contact me for more information.</p>
         </div>
         <button class="faq">For the Pre Built Websites what templates are available?</button>
         <div class="panel">
-                <p>Currently we have Xtremex Hosting, Discord Bot Page. Contact us or <a href="templates.html">click here</a>  for more
+                <p>Currently the templates are Xtremex Hosting, Discord Bot Page. Contact me or <a href="templates.html">click here</a>  for more
                         information.</p>
         </div>
         <button class="faq">How will my previous Website be Upgraded? </button>
         <div class="panel">
-                <p>We will work something out. If you have a website made you want upgraded simply tell me what it is hosted on and I can start updating it.
+                <p>I will work something out. If you have a website made you want upgraded simply tell me what it is hosted on and I can start updating it.
                 </p>
         </div>
         <button class="faq">What is a Custom Website?</button>
         <div class="panel">
                 <p>A Custom Website is a fully customizable website we can work out a reasonable rate per page. Custom
-                        website features include keeping the template and custom finishes as well</p>
+                        website features include keeping the template and custom finishes as well.</p>
         </div>
         <button class="faq">Do you provide hosting?</button>
         <div class="panel">
-                <p>We do not provide hosting for anything</p>
+                <p>I do not provide hosting for any website or application. I simply create the website in HTML.</p>
         </div>
         <button class="faq">Are you doing Backend Development?</button>
         <div class="panel">
-                <p>At the moment no We are not</p>
+                <p>At the moment no I am not. However this could change in the future. </p>
         </div>
         <button class="faq">Do you provide refunds?</button>
         <div class="panel">
-                <p>At this time I do not provide refunds, however if the client is unsatisfied we can provide changes
+                <p>At this time I do not provide refunds, however if the client is unsatisfied I can provide changes
                         to your website
-                        (*terms and conditions apply)</p>
+                        (*terms and conditions apply).</p>
         </div>
         <footer class="footer">
                 <div class="content has-text-centered">
