--- a/pricing.html
+++ b/pricing.html
@@ -59,7 +59,7 @@
                                 <div class="navbar-end">
                                         <div class="navbar-item">
                                                 <div class="buttons">
-                                                        <a class="button is-primary">Help</a>
+                                                        <a class="button is-primary" href="signup.html">Sign Up</a>
                                                         <a class="button is-info">Checkout</a>
                                                 </div>
                                         </div>
@@ -77,16 +77,16 @@
                         <div class="price">$79.99 USD</div>
                         <div class="li">Pre Built Website</div>
                         <div class="li">4 Web Pages</div>
-                        <div class="li">5 Revisions</div>
+                        <div class="li">2 Revisions</div>
                         <div class="li">1-2 Week Delivery</div>
                         <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
                 <div class="card">
-                        <div class="header" style="background-color: dodgerblue;">Upgrade an Existing Website</div>
+                        <div class="header" style="background-color: dodgerblue;">Upgrade Existing Website</div>
                         <div class="price">Custom Price</div>
                         <div class="li">Upgrade your old website</div>
                         <div class="li">We can work out a price per page</div>
-                        <div class="li">3 Revisions Included, $10 per extra</div>
+                        <div class="li">2 Revisions Included, $10 per extra</div>
                         <div class="li">Delivery Time Depends on Project</div>
                         <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
@@ -95,7 +95,7 @@
                         <div class="price">Custom Price</div>
                         <div class="li">Fully Custom Website</div>
                         <div class="li">We can work out a price per page</div>
-                        <div class="li">3 Revisions Included, $10 per extra</div>
+                        <div class="li">2 Revisions Included, $10 per extra</div>
                         <div class="li">Delivery Time Depends on Project</div>
                         <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
