--- a/templates.html
+++ b/templates.html
@@ -60,7 +60,7 @@
                                 <div class="navbar-end">
                                         <div class="navbar-item">
                                                 <div class="buttons">
-                                                        <a class="button is-primary">Help</a>
+                                                        <a class="button is-primary" href="signup.html">Sign Up</a>
                                                         <a class="button is-info">Checkout</a>
                                                 </div>
                                         </div>
@@ -75,7 +75,7 @@
                         </p><br>
                         <p class="subtitle">
                                 All templates have TrueResponsive which means it supports all supported browsers and
-                                devices
+                                devices.
                         </p>
                 </div>
         </section>
