--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons" style="margin-right: 50px">
-                            <a class="button is-primary">Help</a>
+                            <a class="button is-primary" href="signup.html">Sign Up</a>
                             <a class="button is-info">Checkout</a>
                         </div>
                     </div>
