Hero fixed for mobile
The hero was glitching and its now fixed for mobile.

Changed some font sizes to REM

--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 </head>
 <body>
-<section class="hero is-medium is-info">
+<section class="hero is-medium is-info is-mobile is-tablet" style="height: auto">
   <div class="hero-body">
     <p class="title" style="font-family: Verdana, Geneva, Tahoma, sans-serif;font-weight: 450">
       Why Sign Up for Spino Develops?
@@ -24,25 +24,23 @@
       - Up to date information on the website changes and updates
     </p><br>
 
-        <a class="button is-success" onclick="document.getElementById('SignUpForm').style.display='block'">Sign Up</a>
+    <a class="button is-success" onclick="document.getElementById('SignUpForm').style.display='block'">Sign Up</a>
     <a class="button is-warning" href="home.html">Home</a>
       </div>
-
 </section>
 <div id="SignUpForm" class="w3-modal">
   <div class="w3-modal-content">
     <div class="w3-container">
       <span onclick="document.getElementById('SignUpForm').style.display='none'"
             class="w3-button w3-display-topright">&times;</span>
-      <p class="title" style="font-size: 35px;font-family: Verdana, Geneva, Tahoma, sans-serif;font-weight: normal">Sign Up for Spino Develops</p>
+      <p class="title is-1-mobile is-2-tablet" style="font-size: 35px;font-family: Verdana, Geneva, Tahoma, sans-serif;font-weight: normal">Sign Up for Spino Develops</p>
       <form action="https://send.pageclip.co/WPv75nlyHqcpJq4ESmy7HRVG113qBsDW/Sign_Up_Form" class="pageclip-form" method="post">
         <label style="color: black;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: 16px">Full Name</label><br>
         <input class="w3-input w3-border" id="SignUpName" type="text" name="name"/><br>
         <label style="color: black;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: 16px">Email</label><br>
         <input class="w3-input w3-border" id="SignUpEmail" type="email" name="email"/><br>
 
-        <button type="submit" class="pageclip-form__submit" style="background-color: #17e484;width: 15%;border: #17e484 1px solid
-">
+        <button type="submit" class="pageclip-form__submit" style="background-color: #17e484;width: 15%;border: #17e484 1px solid">
           <span>Send</span>
         </button>
       </form>
