Added Gitignore file
gitignore file added for ignoring file for code editor

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                         <div class="navbar-brand">
                                 <a class="navbar-item" href="#">
                                         <img src="media/SpinoDevelopsLogo.png" width="30" height="30"
-                                                alt="Spino Develops Logo">
+                                             alt="Spino Develops Logo">
                                 </a>
 
                                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -68,8 +68,8 @@
         </div>
         <div class="w3-card-4">
         
-                <div class="w3-container w3-blue" style="padding: 20px 20px;height: 10%;">
-                        <h2>Contact Me</h2>
+                <div class="w3-container w3-blue" style="padding: 20px 20px;height: 12%;">
+                        <h2 class="is-1-mobile is-2-tablet">Contact Me</h2>
                 </div>
         
                 <form id="contact" class="w3-container pageclip-form w3-light-grey" style="margin: 10px 10px;padding: 5px 5px;font-size: 16px;" action="https://send.pageclip.co/WPv75nlyHqcpJq4ESmy7HRVG113qBsDW/Contact_Form" method="post">
