--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
         <div class="w3-card-4">
         
                 <div class="w3-container w3-blue" style="padding: 20px 20px;height: 12%;">
-                        <h2 class="is-1-mobile is-2-tablet">Contact Me</h2>
+                        <h2 class="is-1-mobile is-2-tablet is-3-desktop">Contact Me</h2>
                 </div>
         
                 <form id="contact" class="w3-container pageclip-form w3-light-grey" style="margin: 10px 10px;padding: 5px 5px;font-size: 16px;" action="https://send.pageclip.co/WPv75nlyHqcpJq4ESmy7HRVG113qBsDW/Contact_Form" method="post">
