changes to signup and home
Added github sponsors button and some other minor changes

--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Spino Develops" content="Spino Develops">
+    <meta name="SEO" keywords="Website Developer, web developer, websites, Spino, Bilal, Bilal A">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
@@ -98,7 +100,7 @@
         </div>
         <div class="h0">Why Me??</div>
         <div class="reasons" role="list">
-            <div class="rl">Over A Year of experience in Web Development</div>
+            <div class="rl">Over 3 Years of experience in Web Development</div>
             <div class="rl">Options to use frameworks such as Bulma or Bootstrap</div>
             <div class="rl">Templates for Pre Built Websites</div>
             <div class="rl">Responsive Websites</div>
@@ -112,8 +114,10 @@
     <h2 class="title is-3 has-text-centered" style="text-decoration: underline;">Projects</h2>
 
     <div class="w3-content w3-display-container" role="presentation">
-        <a href="typespeedtest.html"><img class="mySlides" src="media/typespeedtester.png" style="width: 100%;" alt="Type Speed Tester"></a>
-        <a href="templates.html"><img class="mySlides" src="media/x.png" style="width:100%" alt="Xtremex Hosting Image"></a>
+        <a href="typespeedtest.html"><img class="mySlides" src="media/typespeedtester.png" style="width: 100%;"
+                alt="Type Speed Tester"></a>
+        <a href="templates.html"><img class="mySlides" src="media/x.png" style="width:100%"
+                alt="Xtremex Hosting Image"></a>
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
     </div>
