--- a/home.html
+++ b/home.html
@@ -42,16 +42,19 @@
                             Social
                         </a>
                         <div class="navbar-dropdown">
-                            <a class="navbar-item" href="https://twitter.com/spinodevelops" target="_blank">
+                            <a rel="noopener" class="navbar-item" href="https://twitter.com/spinodevelops"
+                                target="_blank">
                                 Twitter
                             </a>
-                            <a class="navbar-item" href="https://discord.gg/bmsvFDThMQ" target="_blank">
+                            <a rel="noopener" class="navbar-item" href="https://discord.gg/bmsvFDThMQ" target="_blank">
                                 Discord
                             </a>
-                            <a class="navbar-item" href="https://github.com/bilalahmed1905" target="_blank">
+                            <a rel="noopener" class="navbar-item" href="https://github.com/bilalahmed1905"
+                                target="_blank">
                                 Github
                             </a>
-                            <a class="navbar-item" href="https://instagram.com/spinodevelops" target="_blank">
+                            <a rel="noopener" class="navbar-item" href="https://instagram.com/spinodevelops"
+                                target="_blank">
                                 Instagram
                             </a>
                         </div>
