--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -18,7 +19,7 @@
                         <div class="navbar-brand">
                                 <a class="navbar-item" href="#">
                                         <img src="media/SpinoDevelopsLogo.png" width="30" height="30"
-                                             alt="Spino Develops Logo">
+                                                alt="Spino Develops Logo">
                                 </a>
 
                                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -40,16 +41,23 @@
                                                         Social
                                                 </a>
                                                 <div class="navbar-dropdown">
-                                                        <a class="navbar-item" href="https://twitter.com/spinodevelops" target="_blank">
+                                                        <a rel="noopener" class="navbar-item"
+                                                                href="https://twitter.com/spinodevelops"
+                                                                target="_blank">
                                                                 Twitter
                                                         </a>
-                                                        <a class="navbar-item" href="https://discord.gg/bmsvFDThMQ" target="_blank">
+                                                        <a rel="noopener" class="navbar-item"
+                                                                href="https://discord.gg/bmsvFDThMQ" target="_blank">
                                                                 Discord
                                                         </a>
-                                                        <a class="navbar-item" href="https://github.com/bilalahmed1905" target="_blank">
+                                                        <a rel="noopener" class="navbar-item"
+                                                                href="https://github.com/bilalahmed1905"
+                                                                target="_blank">
                                                                 Github
                                                         </a>
-                                                        <a class="navbar-item" href="https://instagram.com/spinodevelops" target="_blank">
+                                                        <a rel="noopener" class="navbar-item"
+                                                                href="https://instagram.com/spinodevelops"
+                                                                target="_blank">
                                                                 Instagram
                                                         </a>
                                                 </div>
@@ -67,18 +75,18 @@
                         </div>
                 </nav>
         </div>
-        <div class="h0" style="text-decoration: underline;">
-                Website Pricing</div>
+        <div class="h0"><b style="color: black;">
+                        Website Pricing</b></div>
         <div class="subtitle has-text-centered">For more information on website templates <a href="templates.html">click
                         here</a></div>
         <div class="cardContainer">
                 <div class="card">
                         <div class="header">Starter Website</div>
-                        <div class="price">$79.99 USD</div>
+                        <div class="price">$249.99 USD</div>
                         <div class="li">Pre Built Website</div>
                         <div class="li">4 Web Pages</div>
-                        <div class="li">2 Revisions</div>
-                        <div class="li">1-2 Week Delivery</div>
+                        <div class="li">1 Revision, $50 per extra</div>
+                        <div class="li">2-4 Week Delivery</div>
                         <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
                 <div class="card">
@@ -86,7 +94,7 @@
                         <div class="price">Custom Price</div>
                         <div class="li">Upgrade your old website</div>
                         <div class="li">We can work out a price per page</div>
-                        <div class="li">2 Revisions Included, $10 per extra</div>
+                        <div class="li">1 Revision Included, $30 per extra</div>
                         <div class="li">Delivery Time Depends on Project</div>
                         <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
@@ -95,7 +103,7 @@
                         <div class="price">Custom Price</div>
                         <div class="li">Fully Custom Website</div>
                         <div class="li">We can work out a price per page</div>
-                        <div class="li">2 Revisions Included, $10 per extra</div>
+                        <div class="li">1 Revision Included, $30 per extra</div>
                         <div class="li">Delivery Time Depends on Project</div>
                         <div class="li"><a href="contact.html" class="button is-success">Contact Me</a></div>
                 </div>
